# amazon-documentdb-odbc-driver

./: .clang-format  .codecov.yml  .gitignore  CHANGELOG.md  LICENSE  LICENSE.rtf  NOTICE  README.md  THIRD-PARTY  THIRD-PARTY-NOTICES  VS-C++-Settings-Export.vssettings  build_linux_debug64.sh  build_linux_release32_deb.sh  build_linux_release32_rpm.sh  build_linux_release64_deb.sh  build_linux_release64_rpm.sh  build_mac_debug64.sh  build_mac_release64.sh  build_win_relwithdebinfo32.ps1  build_win_relwithdebinfo64.ps1  compile_commands.json  documentdb.cfg  generate_code_cov.sh  run_cppcheck.bat  run_cppcheck.ps1  run_cppcheck.sh  run_test_runner.sh
src/: CMakeLists.txt  CMakeSettings.json.in  DEVNOTES.txt  README.txt  cpp.dxg  linux_32bit_toolchain.cmake
src/DSNInstaller/: dsn_installer.cpp
src/IntegrationTests/: CMakeLists.txt
src/IntegrationTests/ITODBCAwsAuth/: CMakeLists.txt  test_odbc_aws_auth.cpp  test_odbcinst.ini
src/IntegrationTests/ITODBCCatalog/: CMakeLists.txt  test_odbc_catalog.cpp
src/IntegrationTests/ITODBCConnection/: AWSProfileRegistry.reg  AWSProfileRegistry_Win32.reg  CMakeLists.txt  IAMRegistry.reg  IAMRegistry_Win32.reg  odbc-linux.ini  odbc.ini  odbcinst-linux.ini  test_odbc_connection.cpp
src/IntegrationTests/ITODBCDescriptors/: CMakeLists.txt  test_odbc_descriptors.cpp
src/IntegrationTests/ITODBCExecution/: CMakeLists.txt  test_odbc_execution.cpp
src/IntegrationTests/ITODBCHelper/: CMakeLists.txt  it_odbc_helper.cpp  it_odbc_helper.h
src/IntegrationTests/ITODBCInfo/: CMakeLists.txt  test_odbc_info.cpp
src/IntegrationTests/ITODBCPagination/: CMakeLists.txt  test_odbc_pagination.cpp
src/IntegrationTests/ITODBCResults/: CMakeLists.txt  test_odbc_results.cpp
src/IntegrationTests/ITODBCSAMLAuthentication/: CMakeLists.txt  pch.cpp  pch.h  test_odbc_saml_authentication.cpp
src/IntegrationTests/ITODBCTableauQueries/: CMakeLists.txt  test_odbc_tableau_queries.cpp
src/PerformanceTests/: CMakeLists.txt  Performance_Test_Plan.csv
src/PerformanceTests/PTODBCExecution/: CMakeLists.txt  performance_odbc_execution.cpp
src/PerformanceTests/PTODBCInfo/: CMakeLists.txt  performance_odbc_info.cpp
src/PerformanceTests/PTODBCResults/: CMakeLists.txt  performance_odbc_results.cpp
src/PerformanceTests/performance/: LICENSE  it_odbc_helper.cpp  it_odbc_helper.h  performance.cpp  performance_test_runner.cpp  performance_test_runner.h
src/PowerBIConnector/: AmazonTimestreamAADConnector.ps1  AmazonTimestreamConnector.ps1  TimestreamConnector.ps1
src/PowerBIConnector/AmazonTimestreamAADConnector/: AmazonTimestreamAADConnector.pq  AmazonTimestreamAADConnector.query.pq
src/PowerBIConnector/AmazonTimestreamConnector/: AmazonTimestreamConnector.pq  AmazonTimestreamConnector.query.pq  Diagnostics.pqm
src/PowerBIConnector/TimestreamConnector/: OdbcConstants.pqm  TimestreamConnector.mproj  TimestreamConnector.pq  TimestreamConnector.query.pq  resources.resx
src/TableauConnector/timestream_sql_odbc_dev/: manifest.xml
src/TestRunner/: mako_template.html  test_exclude_list.txt  test_runner.py
src/Tests/: CMakeLists.txt
src/Tests/ITODBCHelper/: CMakeLists.txt  it_odbc_helper.cpp  it_odbc_helper.h
src/Tests/Tests/: AWSProfileRegistry.reg  AWSProfileRegistry_Win32.reg  CMakeLists.txt  (+24 more)
src/UnitTests/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core-test/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/gtest/: googletest.cmake
src/installer/: CMakeLists.txt  patch.xml  patch64.xml  postinstall
src/markdown/: index.md  troubleshooting-guide.md
src/modules/: code-coverage.cmake
src/network/: CMakeLists.txt
src/odbc/: CMakeLists.txt  README.txt  module.def  version.rc.in
src/odbc-test/: CMakeLists.txt  CMakeLists.txt.bak
src/odbcdriver/: CMakeLists.txt  CancelQueryRequest.cpp  CancelQueryRequest.h  CancelQueryResult.cpp  CancelQueryResult.h  ColumnInfo.cpp  ColumnInfo.h  DatabaseQueryClient.cpp  DatabaseQueryClient.h  DatabaseQueryEndpoint.cpp  DatabaseQueryEndpoint.h  DatabaseQueryErrorMarshaller.cpp  DatabaseQueryErrorMarshaller.h  DatabaseQueryErrors.cpp  DatabaseQueryErrors.h  DatabaseQueryRequest.h  Datum.cpp  Datum.h  DescribeEndpointsRequest.cpp  DescribeEndpointsRequest.h  DescribeEndpointsResult.cpp  DescribeEndpointsResult.h  Endpoint.cpp  Endpoint.h  QueryRequest.cpp  QueryRequest.h  QueryResult.cpp  QueryResult.h  QueryStatus.cpp  QueryStatus.h  Row.cpp  Row.h  ScalarType.cpp  ScalarType.h  Type.cpp  Type.h  api30.c  apifunc.h  columninfo.c  columninfoclass.c  (+47 more)
src/odbcdriverenlist/: CMakeLists.txt
src/odfeenlist/: CMakeLists.txt  elasticenlist.h  msdtc_enlist.cpp
src/odfesqlodbc/: CMakeLists.txt  aad_credentials_provider.cpp  api30.c  apifunc.h  bind.c  bind.h  catfunc.h  columninfo.c  columninfo.h  communication.cpp  communication.h  communication_factory.cpp  communication_factory.h  connection.c  connection.cpp  connection.h  convert.c  convert.h  descriptor.c  descriptor.h  dlg_specific.c  dlg_specific.h  dlg_wingui.c  driver_connect.cpp  driver_connect.h  drvconn.c  drvconn.h  environ.c  environ.h  es_api30.c  es_apifunc.h  es_communication.cpp  es_communication.h  es_connection.cpp  es_connection.h  es_driver_connect.cpp  es_driver_connect.h  es_helper.cpp  es_helper.h  es_info.cpp  (+68 more)
src/power-bi-connector/: AmazonDocumentDBConnector.ps1
src/tests/: CMakeLists.txt  README.md
src/timestreamenlist/: CMakeLists.txt  enlist.h  msdtc_enlist.cpp
src/timestreamsqlodbc/: CMakeLists.txt  aad_credentials_provider.cpp  aad_credentials_provider.h  api30.c  bind.c  columninfo.h  communication.cpp  communication.h  connection.c  connection.cpp  convert.c  convert.h  descriptor.c  dlg_specific.c  dlg_specific.h  dlg_wingui.c  driver_connect.cpp  drvconn.c  environ.c  execute.c  helper.cpp  helper.h  info.c  info.cpp  info.h  loadlib.c  misc.c  misc.h  multibyte.c  mylog.c  mylog.h  odbc.c  odbc.h  odbc_communication.cpp  odbc_communication.h  odbc_statement.cpp  odbcapi.c  odbcapi30w.c  odbcapiw.c  okta_credentials_provider.cpp  (+17 more)
tools/ODBCcli/: CMakeLists.txt  README.md  client.cpp  client.h  main.cpp
(+809 files in other folders)
